--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,7 @@ input {
     background-color: #f2f2f2;
     border-radius: 10px;
     margin-right: 20px;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 0px 10px 0px;
 }
 
 #lodging h2{
@@ -252,7 +252,7 @@ input {
     text-decoration: none;
     display: flex;
     flex-wrap: wrap;
-    max-width: 200px;
+    width: 200px;
     color: #000000;
 }
 
@@ -263,12 +263,16 @@ input {
     padding-left: 15px;
 } 
 
-/*Images et textes hebergements*/
+/*Images et textes hebergements*/   ici 
+.image_card {
+    width:100%
+}
+
 .image_card img{
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     object-fit: cover; 
-    width: 100%;
+    width: 200px;
     height:85px;
 }
 
@@ -309,8 +313,8 @@ input {
 #popular{
     background-color: #F2F2F2;
     border-radius: 10px;
-    padding: 10px 10px 10px 10px;
-    max-width: 400px;
+    padding: 10px 0px 10px 0px;
+    width: 400px;
 }
 
 .popular_title{
@@ -330,6 +334,7 @@ input {
 
 .fa-chart-line{
     color: #000000;
+    padding-right: 10px;
 }
 
 
@@ -353,7 +358,7 @@ input {
     color:#000000;
     display: flex;
     justify-content: space-between;
-    max-width: 400px;
+    width: 400px;
     height: 120px;  
 }
 
@@ -405,12 +410,12 @@ input {
 #bloc_activity{
     display: flex;
     margin-bottom: 35px;
-    padding:10px;
+    padding: 10px 0px 10px 0px;
 }
 
 #activity{
     width:100%;
-    padding: 20px;
+    padding: 10px;
 }
 
 #activity h2{
@@ -431,7 +436,7 @@ input {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin:20px 0px;
+    margin:20px 5px;
 }
 
 .activity_card a{
@@ -551,22 +556,23 @@ footer ul li a{
     }
 
     .lodging_card a{
-        max-width: 280px;
+        width: 280px;
     }
 
     .image_card img{
-        height:170px;
+        width: 280px;
+        height:120px;
     }
 
 /*les + populaires*/
     #popular {
         order:1;
-        max-width: 100%;
-        margin:0px;
+        width: 100%;
+        margin-right: 25px;
     }
 
     .popular_card a{
-        max-width: 100%;
+        width: 100%;
         height: 150px;   
     }
 
@@ -580,19 +586,24 @@ footer ul li a{
     
 /*Activité*/
     .activity_card a, .activity_card2 a, .activity_card3 a  {
-        max-width: 220px;
+        width: 220px;
     }
 }
 
 @media screen and (max-width:1024px){
 /*Hébergement*/        
     .lodging_card a{
-        max-width: 230px;
+        width: 230px;
+    }
+
+    .image_card img{
+        width: 230px;
+        height:120px;
     }
 
 /*Activité*/
     .activity_card a, .activity_card2 a, .activity_card3 a  {
-        max-width: 190px;
+        width: 190px;
     }
 
     .description_activity_card h3{
@@ -601,7 +612,7 @@ footer ul li a{
 }
 
 
-@media screen and (max-width:868px){
+@media screen and (max-width:790px){
 /*Navigation*/
     nav {
         position: relative;
@@ -668,14 +679,19 @@ footer ul li a{
         padding-left: 0px;
     }
     
-/*Hebergements*/
+/*Hébergement*/        
     .lodging_card a{
-        max-width: 100%;
+        width: 100%;
     }
 
+    .image_card {
+        width:100%
+    }
     .image_card img{
+        width: 100%;
         height:200px;
     }
+
 
 /*Activités*/
     .div_activity {
@@ -688,18 +704,22 @@ footer ul li a{
     .activity_card a, 
     .activity_card2 a, 
     .activity_card3 a{
-        max-width: 100%;
+        width: 100%;
     }
 
+    .activity_card{
+        width: 100%;
+    }
+                            
     .activity_image_card img, 
     .activity_image_card2 img, 
     .activity_image_card3 img, 
     .activity_image_card5 img{
-        max-width: 100%;
+        width: 100%;
         height: 200px;
     }
 
-    .description_activity_card h3{
-        font-size: 14px; 
+    .description_activity_card h3 {
+        font-size: 14px;
     }
 }
