footer: ajout padding-left

--- a/css/styles.css
+++ b/css/styles.css
@@ -520,6 +520,7 @@ footer div section{
     min-width: 300px;
     margin-bottom: 30px;
     font-size: 15px;
+    padding-left: 10px;
 }
 
 footer ul{
